# zeiterfassung

./: .editorconfig  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  renovate.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build-deploy.yml  build-mobile.yml  ci.yml  docs.yml  security.yml
backend/: build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
docker/: nginx.conf
docs/: CHANGELOG.md  CURRENT_STATE.md  PHASES.md
docs/administration/: README.md
docs/architecture/decisions/: 001-spring-boot-kotlin-backend.md  002-jwt-authentication.md  003-react-typescript-frontend.md  004-arbzg-compliance-engine.md  005-rust-terminal-application.md  README.md
docs/development/: adding-languages.md  architecture.md  setup.md  testing.md
docs/installation/: README.md  mobile-apps.md  mobile-provisioning.md  quick-start.md  terminal.md
docs/user-guide/: README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/e2e/: playwright.config.ts  tsconfig.json
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
mobile/android/: gradle.properties  settings.gradle.kts
mobile/ios/: .swiftlint.yml  Package.swift  README.md
terminal/: Cargo.toml  terminal.toml
terminal/assets/: README.md
terminal/locales/de/: main.ftl
terminal/locales/en/: main.ftl
terminal/src/: config.rs  main.rs
terminal/src/api/: mod.rs
terminal/src/audio/: mod.rs
terminal/src/buffer/: mod.rs
terminal/src/rfid/: mod.rs
terminal/src/ui/: mod.rs  screens.rs
(+288 files in other folders)
